--- a/src/static_files/basis/css/basis.css
+++ b/src/static_files/basis/css/basis.css
@@ -14,12 +14,67 @@
     --color-nav-inactive: #BEBEBE;
 
     --main-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+
+    --container: 79.8%;
+    --container-fluid: 100%;
+
+    --color-text: #86868B;
+    --color-bold: #5B5B61;
+    --color-title: #1D1D1F;
+    --color-link: #0066CC;
+
+    --br: 7px;
 } 
+body {
+    background: var(--bg-general);
+}
+p {
+    color: var(--color-text); 
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px; 
+}
+b {
+    color: var(--color-bold);
+}
+a {
+    color: var(--color-link);
+    text-decoration: none;
+}
+h1, h2, h3, h4, h5, h6 {
+    color: var(--color-title);
+    font-weight: 600;
+}
+h1 {
+    font-size: 70px;
+    line-height: 85px;
+}
+h2 {
+    font-size: 50px;
+    line-height: 61px;
+}
+h3 {
+    font-size: 40px;
+    line-height: 49px;
+} 
+h4 {
+    font-size: 32px;
+    line-height: 39px;
+}
+h5 {
+    font-size: 25px;
+    line-height: 30px;
+}
+h6 {
+    font-size: 20px;
+    line-height: 24px;
+}
 
-/* base components */
+
+/* basis components */
 
 
-/* base set up */
+/* basis set up */
 .wrapper {
     display: flex;
     flex-direction: column;
@@ -27,27 +82,24 @@
     justify-content: space-between;
 
     height: 100vh;
-}
-.separator {
-
-}
-.fix-navigation {
-    margin-top: 100px;
-}
-.fix-footer {
-    margin-top: 100px;
-}
-
+} 
 .centralize {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 .container {
-    width: 89.5%;
+    width: var(--container);
 }
 .container-fluid {
-    width: 100%;
+    width: var(---container-fluid);
+}
+
+.fix-navigation {
+    margin-top: 150px;
+}
+.fix-footer {
+    margin-top: 100px;
 }
 
 /* navigation */
@@ -69,8 +121,11 @@
 .logo {
     display: flex;
     align-items: center;
-    height: 100%;
-
+    height: 100%; 
+}
+.logo a { 
+    color: var(--color-title);
+    text-decoration: none;
     font-weight: 600;
     font-size: 40px;
     line-height: 49px;
@@ -93,16 +148,24 @@ nav {
 .link-view-unit a {
     margin-right: 5px;
 }
-
+.link-view-unit svg {
+    fill: var(--color-nav-inactive);
+}
+.nav-link:hover {
+    color: var(--color-nav-active);
+}
+.link-view-unit:hover svg {
+    fill: var(--color-nav-active);
+}
+.link-view-unit:hover a {
+    color: var(--color-nav-active);
+}
 .nav-link {
     font-weight: 500;
     font-size: 20px;
     text-decoration: none;
     color: var(--color-nav-inactive);
-}
-.nav-link:hover {
-    color: var(--color-nav-active);
-}
+} 
 .nav-link-active {
     color: var(--color-nav-active);
 } 
@@ -126,5 +189,16 @@ nav {
 
 /* content */
 
-/* footer */
 
+/* footer */
+footer {
+    display: flex;
+    justify-content: center;
+    padding: 50px 0; 
+}
+.footer-item {
+    text-align: center; 
+}
+.footer-item:not(:last-child) {
+    margin-bottom: 10px;
+}
