--- a/src/templates/basis/conponents/navigation.html
+++ b/src/templates/basis/conponents/navigation.html
@@ -40,6 +40,9 @@
                 <a href="" class="nav-link nav-link-inactive">Абітурієнту</a>
             </div>
             <div class="nav-expanded multi-nav-part">
+                <a href="" class="nav-link nav-link-inactive">Студенту</a>
+            </div>
+            <div class="nav-expanded multi-nav-part">
                 <a href="" class="nav-link nav-link-inactive">ЗНО</a>
             </div>
         </div>
