--- a/src/static_files/basis/css/basis.css
+++ b/src/static_files/basis/css/basis.css
@@ -5,6 +5,7 @@
     box-sizing: border-box;
 
     font-family: 'Montserrat', sans-serif;
+    font-size: 20px;
 
     --bg-general: #F6F7FB;
     --bg-light-block: #ffffff; 
@@ -24,14 +25,14 @@
     --color-link: #0066CC;
 
     --br: 7px;
+    --br-big: 20px;
 } 
 body {
     background: var(--bg-general);
-}
+} 
 p {
     color: var(--color-text); 
     font-weight: 500;
-    font-size: 20px;
     line-height: 24px; 
 }
 b {
@@ -44,6 +45,7 @@ a {
 h1, h2, h3, h4, h5, h6 {
     color: var(--color-title);
     font-weight: 600;
+    margin-bottom: 30px;
 }
 h1 {
     font-size: 70px;
@@ -68,6 +70,9 @@ h5 {
 h6 {
     font-size: 20px;
     line-height: 24px;
+}
+section{
+    margin-bottom: 150px;
 }
 
 
@@ -104,7 +109,7 @@ h6 {
 
 /* navigation */
 .navigation {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     display: flex;
