--- a/src/templates/base/conponents/footer.html
+++ b/src/templates/base/conponents/footer.html
@@ -1,5 +1,5 @@
-<footer> 
-    <div class="footer-item">
-        <p>© 2013 Самбірський коледж економіки та інформатики. Усі права захищені.</p>
+<footer class="centralize"> 
+    <div class="container footer-item">
+        <p class="mobile-space">© 2013 Самбірський коледж економіки та інформатики. Усі права захищені.</p>
     </div>
 </footer>
