--- a/src/templates/base/base.html
+++ b/src/templates/base/base.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- SEO -->
+    <meta name="description" content="Free Web tutorials">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+
     <!-- statics -->
     <link rel="stylesheet" href="{% static 'base/css/base.css' %}">
     {% block static %}{% endblock %}
