--- a/src/templates/main/main.html
+++ b/src/templates/main/main.html
@@ -25,7 +25,7 @@
                              
                             <div class="panel-date-of">
                                 <p>{{ event_item.event_date | date:'d M. Y' }}</p>
-                                <img src="{% static 'main/img/icon-calendar.svg' %}" alt="">
+                                <img src="{% static 'base/img/icon-calendar.svg' %}" alt="">
                             </div> 
                         </div>
                         {% endfor %}
