--- a/src/static_files/base/css/base.css
+++ b/src/static_files/base/css/base.css
@@ -14,7 +14,8 @@
     --color-nav-active: #000000;
     --color-nav-inactive: #BEBEBE;
 
-    --main-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+    --shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+    --shadow-big: 0px 0px 20px rgba(0, 0, 0, 0.4);
  
     --container: 100%; 
     --container-fluid: 100%;
@@ -85,7 +86,7 @@ h6 {
     justify-content: space-between;
     align-items: center;
     background: var(--bg-light-block);
-    box-shadow: var(--main-shadow);
+    box-shadow: var(--shadow);
     border-radius: var(--br-dynamic);
     padding: var(--m-block-paddings);
     width: 100%; 
@@ -97,22 +98,24 @@ h6 {
     display:inline-block;
     text-overflow: ellipsis;
     white-space: nowrap;   
-}
-.panel p {
-    margin-right: 10px;
-}
+} 
 .panel-date-of {
     display: flex; 
+    width: min-content;
 }   
 .panel-date-of p {
+    margin-right: 10px;
     white-space: nowrap;
 }
 .panel-date-of img {
+    width: 23px;
+    height: 23px;
     flex-shrink: 0;
 }
 .card {
+    position: relative;
     background: var(--bg-light-block);
-    box-shadow: var(--main-shadow);
+    box-shadow: var(--shadow);
     border-radius: var(--br-dynamic-big);
     padding: var(--m-block-paddings-big);
 }
@@ -123,6 +126,13 @@ h6 {
     display:inline-block;
     text-overflow: ellipsis;
     white-space: nowrap;
+}
+.link-fluid {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
 
 /* basis set up */
@@ -167,7 +177,7 @@ section{
     justify-content: space-between;
     align-items: center;
     background: var(--bg-light-block);
-    box-shadow: var(--main-shadow);
+    box-shadow: var(--shadow);
     padding: 0 16px;
     width: 100%;
     height: 80px;
@@ -204,7 +214,7 @@ nav {
     opacity: 0;
     overflow: scroll;
     position: fixed;
-    top: -100px; 
+    top: -100%; 
     left: 0;
     padding: 100px 10px 100px 16px;
     width: 100%; 
@@ -317,7 +327,7 @@ footer {
 /* media */
 @media screen and (min-width: 550px) {
     * { 
-        font-size: 20px; 
+        font-size: 16px; 
         --container: calc(100vw - 80px); 
         --br: 7px;
         --br-dynamic: 7px;
@@ -373,7 +383,7 @@ footer {
     }
     .nav-link {
         font-weight: 500;
-        font-size: 20px; 
+        font-size: 16px; 
     }
     .link-view-unit:hover svg {
         fill: var(--color-nav-active);
@@ -416,7 +426,7 @@ footer {
     }
     .multi-nav:hover { 
         background: var(--bg-light-block);
-        box-shadow: var(--main-shadow);
+        box-shadow: var(--shadow);
         position: relative;
         height: min-content;
     }
@@ -434,7 +444,7 @@ footer {
         --container: 1060px;
     }
     .fix-navigation {
-        margin-top: 150px;
+        margin-top: 140px;
     }
 }
 
@@ -444,3 +454,27 @@ footer {
     }
     
 }  
+
+
+
+
+
+/* @media screen and (min-width: 550px) {
+    
+}
+
+@media screen and (min-width: 720px) {
+    
+}
+
+@media screen and (min-width: 960px) {
+    
+}
+
+@media screen and (min-width: 1140px) {
+    
+}
+
+@media screen and (min-width: 1320px) {
+    
+} */
