--- a/src/templates/base/base.html
+++ b/src/templates/base/base.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- SEO -->
-    <meta name="description" content="Free Web tutorials">
-    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <!-- SEO --> 
+    <meta name="keywords" content="Самбірський технікум економіки та інформатики, СТЕТІ, СТЕІ, статистичний технікум, статтехнікум, Самбір технікум,технікум м.Самбір, Самбір ВУЗи, ВУЗи Львівщини" />
+    <meta name="description" content="Офіційний сайт Самбірського технікуму економіки та інформатики" />
 
     <!-- statics -->
     <link rel="stylesheet" href="{% static 'base/css/base.css' %}">
