--- a/src/static_files/base/css/base.css
+++ b/src/static_files/base/css/base.css
@@ -82,6 +82,7 @@ h6 {
     fill: var(--color-text);
 }
 .panel {  
+    position: relative;
     display: flex; 
     justify-content: space-between;
     align-items: center;
@@ -132,7 +133,9 @@ h6 {
     top: 0;
     left: 0;
     right: 0;
-    bottom: 0;
+    bottom: 0; 
+    margin: 0;
+    padding: 0;
 }
 
 /* basis set up */
