--- a/src/static_files/base/css/base.css
+++ b/src/static_files/base/css/base.css
@@ -137,6 +137,13 @@ h6 {
     margin: 0;
     padding: 0;
 }
+.image-fluid {
+    display: block;
+    flex-shrink: 0;
+    object-fit: cover;
+    min-width: 100%;
+    height: 100%;
+}
 
 /* basis set up */
 .wrapper {
