--- a/src/templates/NAE/news-announcements.html
+++ b/src/templates/NAE/news-announcements.html
@@ -32,7 +32,7 @@
                     <a class="mobile-space" href="{% url 'news' %}">Дивитись більше</a>
                 </div>
                 {% else %}
-                <p>Покищо немає новин</p>
+                <p class="mobile-space">Покищо немає новин</p>
                 {% endif %}
             </section> 
 
@@ -61,7 +61,7 @@
                     </div> 
                 </div>
                 {% else %}
-                <p>Покищо немає оголошення</p>
+                <p class="mobile-space">Покищо немає оголошення</p>
                 {% endif %}
             </section>
         </div>
